--- a/sass/style.scss
+++ b/sass/style.scss
@@ -3,7 +3,7 @@
 // NB: could include other sass files, like a normalizer etc.
 
 // The styles for the style guide nav items etc.
-@import 'styleguide';
+@import 'styleguide/styleguide';
 
 $susy: (
   'columns': susy-repeat(6, 8em)
