--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,1 @@
-nav#menu {
-  background: lightgrey;
-  padding: 1em;
-  width: 100%;
-}
-
-section.meta {
-  border: 1px grey solid;
-  margin: 0 0 1em 0;
-  padding: 0.5em;
-  width: 100%;
-}
+.block{border:1px #d3d3d3 solid;width:calc(48em + (100% - 48em))}
