--- a/styleguide/layout-includes/head.pug
+++ b/styleguide/layout-includes/head.pug
@@ -1,4 +1,4 @@
 head
   title Style Guide
-  // - Include all the styles.   
-  link(rel="stylesheet", href="../css/style.css")
+  // - Include the styleguide stylesheet.   
+  link(rel="stylesheet", href="./css/styleguide.css")
