--- a/styleguide/components/standard-block.html
+++ b/styleguide/components/standard-block.html
@@ -1,10 +1,10 @@
 <div class="block">
   <div class="block-title">
-    <h2>{{ This is a standard block }}</h2>
+    <h2>{{ This is a standard block title}}</h2>
   </div>
   <div class="block-content">
     <p>
-      {{ Lorem ipsum.... }}
+      {{ Lorem ipsum.... standard block body }}
     </p>
   </div>
 </div>
