--- a/styleguide/index.pug
+++ b/styleguide/index.pug
@@ -1,10 +1,10 @@
 //- index.pug
 doctype html
 html
-  include layout-includes/head.pug
+  include sg-includes/head.pug
   body
 
-    include layout-includes/nav.pug
+    include sg-includes/nav.pug
     h1 Style Guide
     p This style guide includes some components and generic HTML tags.
     
@@ -18,10 +18,5 @@ html
     // TODO: these should be an include as well perhaps...
     #html-tags
       section
-        h1 Header 1
-        h2 Header 2
-        h3 Header 3
-        h4 Header 4
-        h5 Header 5
-        h6 Header 6
-    include layout-includes/foot.pug
+        include sg-includes/standard-tags.html
+    include sg-includes/foot.pug
