added some more colors, part of building up examples, see #9

--- a/src/sass/theme/_colors.scss
+++ b/src/sass/theme/_colors.scss
@@ -1,2 +1,6 @@
 // Define some basic colour palette variables.
 $neutral-border: lightgrey;
+$heavy-border: black;
+$exciting-blue: rgb(39, 205, 255);
+$exciting-pink: rgb(255, 95, 148);
+$exciting-yellow: rgb(255, 232, 23);
